--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -58,3 +58,22 @@
         }
     }
 }
+
+
+#section-2 {
+    padding: 3.5em 6.4%;
+
+    display: flex;
+    flex-direction: column;
+    gap: 2.5em;
+
+    
+}
+
+.section-2 
+{
+    &__item-title
+    {
+        @extend .heading-m;
+    }
+}
