--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -66,6 +66,7 @@
     display: flex;
     flex-direction: column;
     gap: 2.5em;
+    background: $color-gradient1;
 
     
 }
@@ -75,5 +76,65 @@
     &__item-title
     {
         @extend .heading-m;
+    }
+}
+
+
+@media (min-width: 768px)
+{
+
+    #section-2 
+    {
+        padding: 3.75em 5.2%;
+    }
+    .section-2
+    {
+        &__item
+        {
+            display: grid;
+            grid-template-columns: auto auto;
+            grid-template-rows: auto auto;
+            align-items: center;
+            column-gap: 2.5em;
+        }
+
+        &__item-icon 
+        {
+            grid-column: 1 / 2;
+            grid-row: 1 / -1;
+        }
+
+        &__item-title 
+        {
+            grid-column: 2 / -1;
+            grid-row: 1 / 2;
+        }
+        &__item-body
+        {
+            grid-column: 2 / -1;
+            grid-row: 2 / -1;
+        }
+    }
+}
+
+
+@media (min-width: 1440px)
+{
+    #section-2 
+    {
+        padding: 4.5em 11.4% 6em;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+    }
+
+    .section-2
+    {
+        &__item
+        {
+            display: block;
+            flex-basis: 30%;
+            flex-grow: 1;
+        }
     }
 }
