--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -138,3 +138,127 @@
         }
     }
 }
+
+
+
+#section-3 
+{
+    padding: 4.5em 6.4% 6em;
+
+    &__header {
+        text-align: center;
+        margin-bottom: 3.5em;
+        max-width: 686px;
+    }
+
+    &__grid 
+    {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        row-gap: 1em;
+    }
+}
+
+#section-3--desktop 
+{
+    display: none
+}
+
+.section-3 
+{
+    
+    &__title 
+    {
+        @extend .heading-l;
+    }
+    &__item
+    {
+        box-shadow: 16px 32px 56px hsla(211,40%,69%,25%);
+        padding: 1.5em;
+        max-width: 365px;
+        margin-left: auto;
+        margin-right: auto;
+        border-radius: 16px;
+        &-top
+        {
+            display: flex;
+            align-items: center;
+            gap: 1em;
+        }
+
+        &-title 
+        {
+            @extend .heading-s;
+            margin-top: 0;
+        }
+    }
+}
+
+@media (min-width: 768px)
+{
+
+    #section-3
+    {
+        padding: 6em 5.2%;
+        &__grid 
+        {
+            row-gap: 1.5em;
+        }
+    }
+}
+
+
+@media (min-width:1440px) {
+
+    #section-3 
+    {
+        display: none;
+
+        &__content 
+        {
+            max-width: 564px;
+        }
+
+        &__row-1
+        {
+            display: flex;
+            justify-content: space-between;
+            padding-right: 6.25em;
+        }
+
+        &__row-2, &__row-3
+         {
+            display: flex;
+            justify-content: end;
+            column-gap: 2em;
+         }
+
+         &__row-3 
+         {
+            padding-right: 12.5em;
+         }
+        
+    }
+
+    .section-3 
+    {
+        &__item
+        {
+            margin-left: 0;
+            margin-right: 0;
+        }
+    }
+
+    #section-3--desktop
+    {
+        display: flex;
+        flex-direction: column;
+        row-gap: 1.5em;
+        padding: 7.5em 11.4%;
+    }
+
+    
+    
+}
